defect 2044 chinese table alignment fix

--- a/node-app/src/views/hk/components/content/container/style.scss
+++ b/node-app/src/views/hk/components/content/container/style.scss
@@ -33,7 +33,7 @@
 
 //chinese table width issue fix
 @media (max-width: 767px) and (min-width: 320px){
-    :lang(zh-TW) .table-responsive > table > tbody> tr > th, .table.table-striped-column.slf-comparison td {
+    :lang(zh-TW) .table-responsive > table > tbody> tr > th {
         white-space: normal;
     }
 }
